# l-egume

./: AUTHORS  CHANGES  README.md  pyproject.toml  setup.py
conda/: environment.yml  meta.yaml
doc/: conf.py  extra.md  index.md  installation.md
doc/examples/: example1.ipynb  example2.ipynb
legume/: Compar_Voxel_Caribu.py  Fonct_Comp.py  IOtable.py  IOxls.py  Obj3Dutils.py  RIRI5.py  RootDistrib.py  RootMorpho.py  RootMorpho2.py  ShootMorpho.py  V3Dutils.py  __init__.py  calc_root_tropism.r  daily_loop.py  dist_tetaf.r  initialisation.py  l-egume-1.0.37hquad_mixtures_initc.lpy  l-egume.lpy  l-egume_run.py  management_auto.py  params_Ciel.py  run_l-egume_usm.py  run_legume_usm.py  soil_module5.py  soil_moduleN3.py  soil_modulevisu1.py  vgl.def
legume/Photomorph_caribu/: Compar_Voxel_Caribu.py  Fonct_Comp.py  l-egume_Caribu_Feedback.py
legume/Photomorph_caribu/doc/: Grassland.rmd
legume/Photomorph_caribu/input/: ManagementQuentin.xls  Parametres_plante_v5_Quentin.xls  Position_Pois.csv
legume/Photomorph_caribu/output/: Analyse relation fonctionelle.xlsx
legume/input/: Init_sol_exemple.xls  Initialisation_sol_exemple.xls  Parametres_plante_exemple.xls  Parametres_plante_v5cLucas.xls  Parametres_sol_exemple.xls  Parametres_sol_exemple2_debugL_glbis.xls  exemple_corr_matrix.xls  exemple_ls_plt.xls  exemple_sd.xls  liste_scenarios.xls  liste_scenarios_exemple.xls  liste_usms_exemple.xls  liste_usms_nonregression.xls  management_exemple.xls  management_exemple3_debugL_gl.xls  meteo_exemple.xls  meteo_exemple_debugL_gl.xls  mod_susm.xls  sols.xml  stations_exemple.xls  tagenv.pkl  usms.xml
legume/multisim/: analyse_batch_totoMix.r  batch-lpy.r  l-egume_batch.py  l-egume_batch_bystep.py  l-egume_batch_mixture8.py  liste_scenarios.xls  liste_usms_exemple.xls  liste_usms_mix.xls  test_sol_coupling.py
legume/output/: toto.csv
legume/test/: analyse_batch_testnonregression.r  analyse_batch_testvalid.r  fonctions_analyses.r  fonctions_mef.r  visu_output_outHR.r  visu_param.r
legume/test/inputs/: liste_usms_nonregression.xls
legume/test/lastcheck/: dicolast.csv
legume/test/shiny/: VGL_binary_mix_explorer.Rmd
src/openalea/legume/: IOxls.py  Obj3Dutils.py  RootMorpho.py  ShootMorpho.py  daily_loop.py  initialisation.py  l-egume.lpy  l-egume_run.py  management_auto.py  run_legume_usm.py  soil_modulevisu1.py  vgl.def
src/openalea/legume/input/: DivLegLuz15_tec.xml  Lus.2014  Lus.2015  Parametres_plante_exemple.xls  liste_usms_exemple.xls  liste_usms_nonregression.xls  meteo_exemple.xls  my_lstring.txt
src/openalea/legume/multisim/: l-egume_batch.py  l-egume_batch_bystep.py  l-egume_batch_mixture8.py
src/openalea/legume/test/: analyse_batch_testnonregression.r
