[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
]
build-backend = "setuptools.build_meta"

# where your source lies if you followed src layout
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = false # force explicit declaration of data (disable automatic inclusion)

[tool.setuptools.package-data]
"openalea.legume" = ["input/**/*", "*.lpy"]

# enable dynamic version based on git tags
[tool.setuptools_scm]
# Format version to ease alignment with conda/meta.yaml tag-based versioning
fallback_version = "1.4.0.dev0"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[project]
name = "openalea.legume"
authors = [
  { name = "G. Louarn" },
  { name = "L. Faverjon" },
]
description = "Individual-based model ,FSPM, legume, morphogenesis, shoot, roots"
readme = "README.md"
license = "CECILL-C"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]

# you can list here all dependencies that are pip-instalable, and that have a name identical to the one used by conda (to allow reuse of this list in meta.yaml)
# If conda name is different, please do not declare the pip name, and declare conda name in the next section
dependencies = [
    "numpy",
    "scipy",
    "xlrd",
]

[project.optional-dependencies]
test = [
  "pytest",
  "nbmake",
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
]
doc = [
  "sphinx-autobuild",
  "pydata-sphinx-theme",
  "myst-parser",
  "sphinx-favicon",
  "ipykernel",
  "sphinx-copybutton",
  "ipython_genutils",
  "nbsphinx",
]

# section specific to conda-only distributed package (not used by pip yet)
[tool.conda.environment]
channels = [
  "openalea3",
  "conda-forge"
]
dependencies = [
    "openalea.lpy",
]

[project.urls]
Repository = "https://github.com/openalea-incubator/l-egume"
Homepage = "https://github.com/openalea-incubator/l-egume"
"Bug Tracker" = "https://github.com/openalea-incubator/l-egume/issues"
Discussions = "https://github.com/openalea-incubator/l-egume/discussions"
Changelog = "https://github.com/openalea-incubator/l-egume/releases"

[project.entry-points."wralea"]
"legume" = "openalea.legume_wralea"
